Save link data when page saved